--- a/BogWebShop/Css/mainstyle.scss
+++ b/BogWebShop/Css/mainstyle.scss
@@ -1,2 +1,84 @@
-﻿body {
+body {
+    margin: 0;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Dosis', sans-serif;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
+header {
+    width: 100%;
+    position: fixed;
+    background-color: white;
+    top: 0;
+    border-bottom: 1px solid #d75024;
+    z-index: 9999;
+    font-size: 1em;
+}
+
+header::after {
+    clear: both;
+    display: block;
+    content: "";
+}
+
+#companyname {
+    margin: 10px 0 0 15px;
+    float: left;
+    font-weight: 100;
+}
+
+nav {
+    float: right;
+
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+
+        li {
+            float: left;
+
+            a {
+                display: block;
+                padding: 20px;
+            }
+        }
+    }
+}
+
+a:hover {
+    background-color: #f2f2f2;
+    cursor: pointer;
+}
+
+.container-fluid {
+    width: 100%;
+    padding: 20px;
+}
+
+.container {
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
+i {
+    margin-right: 5px;
+}
+
+footer {
+    width: 100%;
+    background-color: black;
+    position: fixed; 
+    bottom: 0;
+    padding: 5px;
+    color: white;
+    text-align: center;
 }
