--- a/BogWebShop/Css/CMS/LoginStyleAdmin.css
+++ b/BogWebShop/Css/CMS/LoginStyleAdmin.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-image: url('../Images/CMS/cms1.png');
+    background-image: url('../../Images/CMS/cms1.png');
     background-position: top;
     background-repeat: no-repeat;
     background-attachment: fixed;
