--- a/BogWebShop/Css/mainstyle.scss
+++ b/BogWebShop/Css/mainstyle.scss
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 body {
     margin: 0;
     font-size: 16px;
@@ -5,8 +9,18 @@ body {
     font-family: 'Dosis', sans-serif;
 }
 
+#wrapper {
+    margin-top: 61px;
+}
+
 * {
     box-sizing: border-box;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -64,9 +78,26 @@ a:hover {
     padding: 20px;
 }
 
+.container-fluid::after {
+    clear: both;
+    content: "";
+    display: block;
+}
+
 .container {
     max-width: 1280px;
     margin: 0 auto;
+}
+
+.container::after {
+    clear: both;
+    content: "";
+    display: block;
+}
+
+.container-half {
+    width: 50%;
+    float: left;
 }
 
 i {
