--- a/BogWebShop/Css/mainstyle.css
+++ b/BogWebShop/Css/mainstyle.css
@@ -1,11 +1,22 @@
-﻿body {
+﻿html {
+  overflow-y: scroll; }
+
+body {
   margin: 0;
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
   font-family: 'Dosis', sans-serif; }
 
+#wrapper {
+  margin-top: 61px; }
+
 * {
   box-sizing: border-box; }
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto; }
 
 h1, h2, h3, h4, h5, h6, p {
   margin: 0; }
@@ -49,9 +60,23 @@ a:hover {
   width: 100%;
   padding: 20px; }
 
+.container-fluid::after {
+  clear: both;
+  content: "";
+  display: block; }
+
 .container {
   max-width: 1280px;
   margin: 0 auto; }
+
+.container::after {
+  clear: both;
+  content: "";
+  display: block; }
+
+.container-half {
+  width: 50%;
+  float: left; }
 
 i {
   margin-right: 5px; }
