--- a/BogWebShop/Css/mainstyle.scss
+++ b/BogWebShop/Css/mainstyle.scss
@@ -24,7 +24,6 @@ img {
 }
 
 h1, h2, h3, h4, h5, h6, p {
-    margin: 0;
 }
 
 header {
@@ -47,6 +46,10 @@ header::after {
     margin: 10px 0 0 15px;
     float: left;
     font-weight: 100;
+}
+
+.container {
+    padding: 20px;
 }
 
 nav {
@@ -73,35 +76,15 @@ a:hover {
     cursor: pointer;
 }
 
-.container-fluid {
-    width: 100%;
-    padding: 20px;
-}
-
-.container-fluid::after {
-    clear: both;
-    content: "";
-    display: block;
-}
-
-.container {
-    max-width: 1280px;
-    margin: 0 auto;
-}
-
-.container::after {
-    clear: both;
-    content: "";
-    display: block;
-}
-
-.container-half {
-    width: 50%;
-    float: left;
-}
 
 i {
     margin-right: 5px;
+}
+
+.products {
+    display: inline-block;
+    vertical-align: top;
+    width: 180px;
 }
 
 footer {
