--- a/BogWebShop/Css/mainstyle.scss
+++ b/BogWebShop/Css/mainstyle.scss
@@ -2,6 +2,11 @@ html {
     overflow-y: scroll;
 }
 
+a {
+    text-decoration: none !important;
+    color: initial;
+}
+
 body {
     margin: 0;
     font-size: 16px;
