--- a/BogWebShop/Css/mainstyle.css
+++ b/BogWebShop/Css/mainstyle.css
@@ -1,6 +1,10 @@
 ﻿html {
   overflow-y: scroll; }
 
+a {
+  text-decoration: none !important;
+  color: initial; }
+
 body {
   margin: 0;
   font-size: 16px;
