--- a/BogWebShop/Views/Shared/_MainLayout.cshtml
+++ b/BogWebShop/Views/Shared/_MainLayout.cshtml
@@ -16,6 +16,7 @@
       <ul>
         <li><a><i class="fa fa-shopping-basket"></i>Kurv</a></li>
         <li><a><i class="fa fa-user"></i>Login</a></li>
+          <li><a><i class="fa fa-phone"></i>Kontakt</a></li>
       </ul>
     </nav>
   </header>
@@ -25,5 +26,6 @@
     <footer>
         <p>&copy;Kod med bøger 2018</p>
     </footer>
+    <script src="~/JavaScripts/jquery-3.3.1.min.js"></script>
 </body>
 </html>
