Committed for work

--- a/BogWebShop/Css/mainstyle.css
+++ b/BogWebShop/Css/mainstyle.css
@@ -77,3 +77,16 @@ footer {
   color: white;
   text-align: center; }
 
+#contactus {
+  max-width: 400px;
+  margin-top: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  background-color: #d75024;
+  border-radius: 4px;
+  color: white; }
+  #contactus input {
+    display: block;
+    width: 80%; }
+
