--- a/BogWebShop/Views/Shared/_MainLayout.cshtml
+++ b/BogWebShop/Views/Shared/_MainLayout.cshtml
@@ -16,7 +16,7 @@
       <ul>
         <li><a><i class="fa fa-shopping-basket"></i>Kurv</a></li>
         <li><a><i class="fa fa-user"></i>Login</a></li>
-          <li><a><i class="fa fa-phone"></i>Kontakt</a></li>
+          <li><a href="/Home/Contact/"><i class="fa fa-phone"></i>Kontakt</a></li>
       </ul>
     </nav>
   </header>
