--- a/BogWebShop/Css/mainstyle.scss
+++ b/BogWebShop/Css/mainstyle.scss
@@ -95,11 +95,14 @@ i {
 footer {
     width: 100%;
     background-color: black;
-    position: fixed; 
-    bottom: 0;
     padding: 5px;
     color: white;
     text-align: center;
+}
+
+select {
+    display: block !important;
+    float: right !important;
 }
 
 #contactus {
