--- a/BogWebShop/Views/Home/Index.cshtml
+++ b/BogWebShop/Views/Home/Index.cshtml
@@ -8,12 +8,22 @@
 <img src="~/Images/Banner.jpg" />
 <section class="container">
     <div class="row">
+        <h2>Velkommen til asphp.dk</h2>
+            <select>
+                <option>Front-end</option>
+                <option>Back-end</option>
+            </select>
+    </div>
+</section>
+<section class="container">
+    <div class="row">
         @foreach (ProductsTable pf in Model)
         {
             <div class="col-lg-3">
                 <a href="/Product/Details/@pf.ID">
                     <img src="~/Images/Products/@pf.Image" />
                     <h2>@pf.ProductName</h2>
+                    <p>@pf.Price DKK</p>
                     <p>@pf.Description.Substring(0, 150)</p>
                 </a>
             </div>
