--- a/BogWebShop/Views/Shared/_MainLayout.cshtml
+++ b/BogWebShop/Views/Shared/_MainLayout.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-      <h1 id="companyname">KOD MED BØGER</h1>
+      <h1 id="companyname">ASPHP.NET</h1>
     <nav>
       <ul>
         <li><a><i class="fa fa-shopping-basket"></i>Kurv</a></li>
