--- a/BogWebShop/Areas/CMS/Views/Home/Index.cshtml
+++ b/BogWebShop/Areas/CMS/Views/Home/Index.cshtml
@@ -4,5 +4,8 @@
     Layout = "~/Views/Shared/_CMSLayout.cshtml";
 }
 
-<h2>Index</h2>
+<canvas id="myChart"></canvas>
 
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+<script src="~/JavaScripts/indexcharts.js"></script>
