--- a/BogWebShop/Views/Shared/_CMSLayout.cshtml
+++ b/BogWebShop/Views/Shared/_CMSLayout.cshtml
@@ -7,7 +7,7 @@
 
     <link href="~/Css/CMS/Bootstrap/bootstrap.css" rel="stylesheet" />
     <link href="~/Css/CMS/CMSCSSMAIN.css" rel="stylesheet" />
-
+    <link href="~/Css/CMS/CMSContactCSS.css" rel="stylesheet" />
 
 </head>
 <body>
