--- a/BogWebShop/Views/Shared/_MainLayout.cshtml
+++ b/BogWebShop/Views/Shared/_MainLayout.cshtml
@@ -23,9 +23,9 @@
     <div id="wrapper">
         @RenderBody()
     </div>
-    <footer>
+    @*<footer>
         <p>&copy;Kod med bøger 2018</p>
-    </footer>
+    </footer>*@
     <script src="~/JavaScripts/jquery-3.3.1.min.js"></script>
 </body>
 </html>
