--- a/BogWebShop/Views/Product/Details.cshtml
+++ b/BogWebShop/Views/Product/Details.cshtml
@@ -5,5 +5,11 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<h2>@Model.ProductName</h2>
+
+<div class="container">
+    <div class="col-lg-6">
+        <h2>@Model.ProductName</h2>
+        <p>@Model.Description</p>
+    </div>
+</div>
 
