--- a/BogWebShop/Views/Product/Details.cshtml
+++ b/BogWebShop/Views/Product/Details.cshtml
@@ -1,5 +1,5 @@
-﻿@using Repository.Models
-@model ProductsTable
+﻿@using BogWebShop.ViewModels;
+@model AuthorVM
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
@@ -7,11 +7,15 @@
 
 
 <div class="container">
-    <div class="col-lg-6">
-        <h2>@Model.ProductName</h2>
-        <p>@Model.Description</p>
+    <div class="row">
+        <div class="col-lg-6">
+            <h2>@Model.Products.ProductName</h2>
+            <p>af: @Model.Authors.Name</p>
+            <p>@Model.Products.Description</p>
+        </div>
+        <div class="col-lg-6">
+            <img src="~/Images/Products/@Model.Products.Image" />
+            <button type="button" onclick="addCart(@Model.Products.ID)">Tilføj til kurv</button>
+        </div>
     </div>
 </div>
-<h2>@Model.ProductName</h2>
-<button type="button" onclick="addCart(@Model.ID)">Tilføj til kurv</button>
-
