--- a/BogWebShop/Css/mainstyle.scss
+++ b/BogWebShop/Css/mainstyle.scss
@@ -120,3 +120,16 @@ select {
         width: 80%;
     }
 }
+
+#counter {
+    position: absolute;
+    border-radius: 100%;
+    text-align: center;
+    border: 0;
+    width: 20px;
+    height: 20px;
+    top: 8px;
+    right: 5px;
+    background-color: red;
+    color: white;
+}
