--- a/BogWebShop/Css/Cart.css
+++ b/BogWebShop/Css/Cart.css
@@ -9,19 +9,37 @@
 	}
 	#cartHolder #Cart {
 		background: #fff;
-		width: 300px;
+		width: 450px;
 		position: absolute;
 		top: 100%;
 		left: 50%;
 		transform: translate(-50%,0);
 		border: 1px solid #d75024;
 		border-top: none;
+		padding: 5px;
+		line-height: 20px;
 	}
-		#cartHolder #Cart li {
-			display: flex;
-			width: 100%;
-			padding: 5px;
+		#cartHolder #Cart div {
+			position: relative;
 		}
-			#cartHolder #Cart li span {
-				flex: auto;
+			#cartHolder #Cart div span.price {
+				padding-left: 5px;
+			}
+			#cartHolder #Cart div:not(:hover) button {
+				display: none;
+			}
+			#cartHolder #Cart div button {
+				position: absolute;
+				top: 0;
+				right:0;
+				transform: translate(-50%,0);
+				height: 100%;
+				color: red;
+				background: #fff;
+			}
+			#cartHolder #Cart div a {
+				width: auto;
+				height: auto;
+				padding: 0;
+				border: #ddd 1px solid;
 			}
