--- a/BogWebShop/Views/Shared/_MainLayout.cshtml
+++ b/BogWebShop/Views/Shared/_MainLayout.cshtml
@@ -10,11 +10,18 @@
 	<link href="~/Css/Cart.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
 	<script type="text/template" id="Template-cartItem">
-		<li>
-			<span>{{Name}}</span>
+		<div class="row">
+			<span class="col-md-6">{{Name}}</span>
 			<input onchange="updateCart({{ID}},this)" type="number" step="1" value="{{Amount}}"/>
+			<span class="price">{{Price}}kr.</span>
 			<button type="button" onclick="removeCart({{ID}})">X</button>
-		</li>
+		</div>
+	</script>
+	<script type="text/template" id="Template-TotalPrice">
+		<div class="row">
+			<span class="col-md-6"><a>Køb nu</a></span>
+			<span class="col-md-6">Total Price {{Total}}kr.</span>
+		</div>
 	</script>
 	@RenderSection("Templates", false);
 </head>
@@ -25,8 +32,8 @@
       <ul>
         <li id="cartHolder">
 			<a><i class="fa fa-shopping-basket"></i>Kurv</a>
-			<ul id="Cart">
-			</ul>
+			<div id="Cart" class="container">
+			</div>
 		</li>
         <li><a><i class="fa fa-user"></i>Login</a></li>
           <li><a href="/Home/Contact/"><i class="fa fa-phone"></i>Kontakt</a></li>
