--- a/BogWebShop/Areas/CMS/Views/Order/Details.cshtml
+++ b/BogWebShop/Areas/CMS/Views/Order/Details.cshtml
@@ -1,12 +1,38 @@
-﻿@using BogWebShop.ViewModels;
-@model List<OrderDetailsVM>
+﻿@using Repository.Models;
+@model List<OrderDetailsRela>
 
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_CMSLayout.cshtml";
 }
 
-@foreach (var lort in Model)
-{
-    <p>@lort.products.Price</p>
-}   
+<h1> Ordre Detaljer </h1>
+
+<table>
+    <thead>
+        <tr>
+            <td>
+                 Produkt Navn 
+            </td>
+            <td>
+                Pris
+            </td>
+            <td>
+                Antal
+            </td>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var details in Model)
+        {
+            <tr>
+                <td> @details.ProductName</td>
+                <td> @details.Price</td>
+                <td> @details.Quantity</td>
+            </tr>
+        }
+    </tbody>
+    <tfoot>
+
+    </tfoot>
+</table>
