--- a/BogWebShop/Css/CMS/CMSCSSMAIN.css
+++ b/BogWebShop/Css/CMS/CMSCSSMAIN.css
@@ -78,7 +78,7 @@ body {
 }
 .navbar-brand{
   display: block;
-  background: #e7e7e7;
+  background: #cacaca;
   width: 100%;
   color: #000;
   text-transform: uppercase;
@@ -116,7 +116,7 @@ body {
   color: #7f799c;
   border-bottom: 1px solid rgba(255,152,0,0.1);
   padding: 10px 25px;
-  font-size: 11px;
+  font-size: 14px;
   letter-spacing: 1px;
 }
 .dash-navbar-left .nb-nav {
@@ -134,7 +134,7 @@ body {
   display: block;
   outline: 0;
   padding: 8px 25px 7px;
-  font-size: 13px;
+  font-size: 15px;
   color: #b7b4c7;
 }
 .dash-navbar-left .nb-nav li a:hover,
