--- a/BogWebShop/Css/mainstyle.css
+++ b/BogWebShop/Css/mainstyle.css
@@ -5,6 +5,10 @@ a {
   text-decoration: none !important;
   color: initial; }
 
+a:hover {
+  color: initial;
+  background-color: #f2f2f2; }
+
 body {
   margin: 0;
   font-size: 16px;
@@ -37,7 +41,7 @@ header::after {
   content: ""; }
 
 #companyname {
-  margin: 10px 0 0 15px;
+  margin: 8px 0 0 15px;
   float: left;
   font-weight: 100; }
 
@@ -56,17 +60,13 @@ nav {
         display: block;
         padding: 20px; }
 
-a:hover {
-  background-color: #f2f2f2;
-  cursor: pointer; }
+.products {
+  margin-bottom: 20px; }
+  .products img {
+    margin-bottom: 10px; }
 
 i {
   margin-right: 5px; }
-
-.products {
-  display: inline-block;
-  vertical-align: top;
-  width: 180px; }
 
 footer {
   width: 100%;
@@ -80,17 +80,21 @@ select {
   float: right !important; }
 
 #contactus {
-  max-width: 400px;
+  max-width: 500px;
   margin-top: 200px;
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
-  background-color: #d75024;
+  background-color: #f2f2f2;
+  border: 1px solid #f00;
   border-radius: 4px;
-  color: white; }
+  color: black; }
   #contactus input {
     display: block;
     width: 80%; }
+  #contactus textarea {
+    display: block;
+    width: 100%; }
 
 #counter {
   position: absolute;
@@ -152,4 +156,32 @@ select {
   border: #ddd 1px solid;
   user-select: none;
   cursor: pointer; }
+
+.loginbox {
+  max-width: 300px;
+  display: block;
+  background-color: #f2f2f2;
+  border: 1px solid #f00;
+  color: black;
+  border-radius: 4px;
+  margin: 0 auto;
+  margin-top: 250px;
+  padding: 20px;
+  box-sizing: border-box; }
+
+.loginbox input {
+  width: 100%;
+  margin-bottom: 10px;
+  color: black; }
+
+.loginbox button {
+  color: black; }
+
+.loginbox label {
+  font-weight: 100; }
+
+.loginbox h2 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  text-align: center; }
 
