--- a/BogWebShop/Views/Shared/_MainLayout.cshtml
+++ b/BogWebShop/Views/Shared/_MainLayout.cshtml
@@ -27,7 +27,7 @@
 </head>
 <body>
   <header>
-      <h1 id="companyname">ASPHP.NET</h1>
+      <a href="/Home/Index"><h1 id="companyname">Læs webudvikling</h1></a>
     <nav>
       <ul>
           <li><a href="/Home/Index"><i class="fa fa-home"></i>Forside</a></li>
@@ -38,7 +38,7 @@
 			<ul id="Cart">
 			</ul>
 		</li>
-        <li><a><i class="fa fa-user"></i>Login</a></li>
+        <li><a href="/User/Index"><i class="fa fa-user"></i>Login</a></li>
           <li><a href="/Home/Contact/"><i class="fa fa-phone"></i>Kontakt</a></li>
       </ul>
     </nav>
