--- a/BogWebShop/Views/User/Index.cshtml
+++ b/BogWebShop/Views/User/Index.cshtml
@@ -8,10 +8,10 @@
     <h2 class="tex">Login</h2>
 
     <form class="login" method="post">
-        <label for="Username">Brugernavn</label><br />
-        <input type="text" name="Username" id="Username" /><br />
+        <label for="Email">Email</label><br />
+        <input type="text" name="Email" /><br />
         <label for="Password">Adgangskode</label><br />
-        <input type="password" name="Password" id="Password" /><br />
+        <input type="password" name="password" /><br />
         <button type="submit">Login</button>
     </form>
 </div>
