--- a/BogWebShop/Views/User/Index.cshtml
+++ b/BogWebShop/Views/User/Index.cshtml
@@ -9,7 +9,7 @@
 
     <form class="login" method="post">
         <label for="Email">Email</label><br />
-        <input type="text" name="Email" /><br />
+        <input type="text" name="email" /><br />
         <label for="Password">Adgangskode</label><br />
         <input type="password" name="password" /><br />
         <button type="submit">Login</button>
