--- a/BogWebShop/Views/Shared/_MainLayout.cshtml
+++ b/BogWebShop/Views/Shared/_MainLayout.cshtml
@@ -20,7 +20,7 @@
 	<script type="text/template" id="Template-TotalPrice">
 		<div>
             <span id="totalPrice">I alt: {{Total}}kr.</span>
-			<a>Køb nu</a>
+			<a href="/Cart/">Køb nu</a>
 		</div>
 	</script>
 	@RenderSection("Templates", false)
