--- a/BogWebShop/Views/User/Register.cshtml
+++ b/BogWebShop/Views/User/Register.cshtml
@@ -1,17 +1,18 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Register";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
 <div class="loginbox">
-    <h2 class="tex">Login</h2>
+    <h2 class="tex">Register</h2>
 
-    <form class="login" action="/User/Index" method="post">
+    <form class="login" action="/User/Register" method="post">
         <label for="Email">Email</label><br />
         <input type="text" name="email" /><br />
         <label for="Password">Adgangskode</label><br />
         <input type="password" name="password" /><br />
-        <button type="submit">Login</button>
+        <button type="submit">Register</button>
     </form>
 </div>
+
