--- a/BogWebShop/Views/Shared/_MainLayout.cshtml
+++ b/BogWebShop/Views/Shared/_MainLayout.cshtml
@@ -7,14 +7,13 @@
     <link href="~/Css/CMS/Bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Css/mainstyle.min.css" rel="stylesheet" />
-	<link href="~/Css/Cart.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
 	<script type="text/template" id="Template-cartItem">
 		<div class="cartContent">
 			<span>{{Name}}</span>
 			<input onchange="updateCart({{ID}},this)" min="1" type="number" step="1" value="{{Amount}}"/>
 			<span class="price">{{Price}}kr.</span>
-			<button type="button" onclick="removeCart({{ID}})">X</button>
+			<button type="button" onclick="removeCart({{ID}},this)">X</button>
 		</div>
 	</script>
 	<script type="text/template" id="Template-TotalPrice">
@@ -34,7 +33,7 @@
         <li id="cartHolder">
 			<a class="cartbutton position-relative">
                 <span id="counter"> </span>
-            <i class="fa fa-shopping-basket"></i>Kurv</a>
+            <i class="fa fa-shopping-basket" style="display:none;"></i>Kurv</a>
 			<ul id="Cart">
 			</ul>
 		</li>
