--- a/BogWebShop/Views/Shared/_MainLayout.cshtml
+++ b/BogWebShop/Views/Shared/_MainLayout.cshtml
@@ -38,7 +38,15 @@
 			<ul id="Cart">
 			</ul>
 		</li>
-        <li><a href="/User/Index"><i class="fa fa-user"></i>Login</a></li>
+          @if (Session["UserID"] != null)
+          {
+            <li><a href="/User/Logout"><i class="fa fa-user"></i>Logout</a></li>
+          }
+          else
+          {
+            <li><a href="/User/Index"><i class="fa fa-user"></i>Login</a></li>
+          }
+
           <li><a href="/Home/Contact/"><i class="fa fa-phone"></i>Kontakt</a></li>
       </ul>
     </nav>
