--- a/BogWebShop/Views/User/Index.cshtml
+++ b/BogWebShop/Views/User/Index.cshtml
@@ -9,9 +9,10 @@
 
     <form class="login" action="/User/Index" method="post">
         <label for="Email">Email</label><br />
-        <input type="text" name="email" /><br />
+        <input type="text" required name="email" /><br />
         <label for="Password">Adgangskode</label><br />
-        <input type="password" name="password" /><br />
+        <input type="password" required name="password" /><br />
         <button type="submit">Login</button>
+        <a href="/User/Register">Register</a>
     </form>
 </div>
