--- a/BogWebShop/Views/User/Register.cshtml
+++ b/BogWebShop/Views/User/Register.cshtml
@@ -7,11 +7,17 @@
 <div class="loginbox">
     <h2 class="tex">Register</h2>
 
-    <form class="login" action="/User/Register" method="post">
+    <form class="login" action="/User/AddNew" method="post">
         <label for="Email">Email</label><br />
-        <input type="text" name="email" /><br />
+        <input type="email" name="Email" required /><br />
         <label for="Password">Adgangskode</label><br />
-        <input type="password" name="password" /><br />
+        <input type="password" name="Password" required /><br />
+        <label for="Name">Fulde navn</label><br />
+        <input type="text" name="Name" required /><br />
+        <label for="ZipCode">Postnummer</label><br />
+        <input type="text" name="ZipCode" required /><br />
+        <label for="Address">Address</label><br />
+        <input type="text" name="Address" required /><br />
         <button type="submit">Register</button>
     </form>
 </div>
